fix check state button

--- a/Plugin/BTCPayServer.Plugins.Cashu/Views/Cashu/CashuWallet.cshtml
+++ b/Plugin/BTCPayServer.Plugins.Cashu/Views/Cashu/CashuWallet.cshtml
@@ -109,10 +109,10 @@
             <div class="card-header bg-transparent border-0 pt-4 px-4">
                 <div class="d-flex justify-content-between ">
                     <h4 class="mb-0">Token Export History</h4>
-                    <a asp-controller="UICashuWallet" asp-action="CheckAllTokenStates" asp-route-storeId="@storeId">
+                    <a id="refreshButton" class="text-muted" asp-controller="UICashuWallet" asp-action="CheckAllTokenStates" asp-route-storeId="@storeId">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
-                            width="24" height="24" viewBox="0 0 24 24"
+                            width="18" height="18" viewBox="0 0 24 24"
                             fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-rotate-cw-icon lucide-rotate-cw">
